schema/testdata/errors/permission_job.keel
job MyJob {
    @permission(
        //expect-error:9:16:AttributeArgumentError:unexpected argument 'actions' for @permission
        actions: [get],
        roles: [MyRole]
    )
}

role MyRole {
}
